@@ -1,5 +1,7 @@
 Changes in Version 0.2.1 (2019-xx-xx)
 =====================================
+poppy
+ - Fix bootstrapping when aggregating function has multiple outputs
 
 Changes in Version 0.2.0 (2019-06-22)
 =====================================
